force-app/main/default/objects/Vendor_Scorecard__c/Vendor_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Vendor Scorecard</label>
    <nameField>
        <displayFormat>VSC-{0000}</displayFormat>
        <label>Vendor Scorecard</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>