force-app/main/default/objects/Vendor_Scorecard__c/fields/AvgCommunicatesnetworkimpactingissue__c.field-meta.xml
<CustomField>
    <fullName>AvgCommunicatesnetworkimpactingissue__c</fullName>
    <formula>Communicates_network_impacting_issues__c / forCNIS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Communicates network impacting issue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>