force-app/main/default/objects/Vendor_Scorecard__c/fields/AvgFamiliarwPGibusinesstroubles__c.field-meta.xml
<CustomField>
    <fullName>AvgFamiliarwPGibusinesstroubles__c</fullName>
    <formula>Familiar_with_PGi_business_and_troubles__c /  forFBT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Familiar w/ PGi business &amp; troubles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>