force-app/main/default/objects/Vendor_Scorecard__c/fields/AvgKnowledgeableofoutstandingproblem__c.field-meta.xml
<CustomField>
    <fullName>AvgKnowledgeableofoutstandingproblem__c</fullName>
    <formula>Knowledgeable_of_outstanding_problems__c /  forKOP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Knowledgeable of outstanding problem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>