force-app/main/default/objects/Vendor_Scorecard__c/fields/AvgProvidesaccuratetimelytickets__c.field-meta.xml
<CustomField>
    <fullName>AvgProvidesaccuratetimelytickets__c</fullName>
    <formula>Provides_accurate_timely_ticket_updates__c /  forPATTU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Provides accurate timely tickets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>