force-app/main/default/objects/Vendor_Scorecard__c/fields/AvgResponsivewhenPGiescalates__c.field-meta.xml
<CustomField>
    <fullName>AvgResponsivewhenPGiescalates__c</fullName>
    <formula>Responsive_when_PGi_escalations_occur__c /  forREO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Responsive when PGi escalates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>