force-app/main/default/objects/Vendor_Scorecard__c/fields/Communicates_network_impacting_issues__c.field-meta.xml
<CustomField>
    <fullName>Communicates_network_impacting_issues__c</fullName>
    <label>Total for CNIS</label>
    <summarizedField>Vendor_Survey__c.Communicates_network_impacting_issues__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Survey__c.Communicates_network_impacting_issues__c</field>
        <operation>notEqual</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Survey__c.Vendor_Scorecard__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>