force-app/main/default/objects/Vendor_Scorecard__c/fields/Familiar_with_PGi_business_and_troubles__c.field-meta.xml
<CustomField>
    <fullName>Familiar_with_PGi_business_and_troubles__c</fullName>
    <label>Total for FBT</label>
    <summarizedField>Vendor_Survey__c.Familiar_with_PGi_business_and_trouble__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Survey__c.Familiar_with_PGi_business_and_trouble__c</field>
        <operation>notEqual</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Survey__c.Vendor_Scorecard__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>