force-app/main/default/objects/Vendor_Scorecard__c/fields/forCNIS__c.field-meta.xml
<CustomField>
    <fullName>forCNIS__c</fullName>
    <label># for CNIS</label>
    <summaryFilterItems>
        <field>Vendor_Survey__c.Communicates_network_impacting_issues__c</field>
        <operation>notEqual</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Survey__c.Vendor_Scorecard__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>