force-app/main/default/objects/Vendor_Scorecard__c/fields/forFBT__c.field-meta.xml
<CustomField>
    <fullName>forFBT__c</fullName>
    <label># for FBT</label>
    <summaryFilterItems>
        <field>Vendor_Survey__c.Familiar_with_PGi_business_and_trouble__c</field>
        <operation>notEqual</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Survey__c.Vendor_Scorecard__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>