force-app/main/default/objects/Vendor_Scorecard__c/fields/forKOP__c.field-meta.xml
<CustomField>
    <fullName>forKOP__c</fullName>
    <label># for KOP</label>
    <summaryFilterItems>
        <field>Vendor_Survey__c.Knowledgeable_of_outstanding_problems__c</field>
        <operation>notEqual</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Survey__c.Vendor_Scorecard__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>