force-app/main/default/objects/Vendor_Scorecard__c/fields/forPATTU__c.field-meta.xml
<CustomField>
    <fullName>forPATTU__c</fullName>
    <label># for PATTU</label>
    <summaryFilterItems>
        <field>Vendor_Survey__c.Provides_accurate_timely_ticket_updates__c</field>
        <operation>notEqual</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Survey__c.Vendor_Scorecard__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>