force-app/main/default/objects/Vendor_Scorecard__c/fields/Knowledgeable_of_outstanding_problems__c.field-meta.xml
<CustomField>
    <fullName>Knowledgeable_of_outstanding_problems__c</fullName>
    <label>Total for KOP</label>
    <summarizedField>Vendor_Survey__c.Knowledgeable_of_outstanding_problems__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Survey__c.Knowledgeable_of_outstanding_problems__c</field>
        <operation>notEqual</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Survey__c.Vendor_Scorecard__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>