force-app/main/default/objects/Vendor_Scorecard__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <label>Month Year</label>
    <length>12</length>
    <type>Text</type>
</CustomField>