force-app/main/default/objects/Vendor_Scorecard__c/fields/Provides_accurate_timely_ticket_updates__c.field-meta.xml
<CustomField>
    <fullName>Provides_accurate_timely_ticket_updates__c</fullName>
    <label>Total for PATTU</label>
    <summarizedField>Vendor_Survey__c.Provides_accurate_timely_ticket_updates__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Survey__c.Provides_accurate_timely_ticket_updates__c</field>
        <operation>notEqual</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Survey__c.Vendor_Scorecard__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>