force-app/main/default/objects/Vendor_Scorecard__c/fields/Related_PGi_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Related_PGi_Vendor__c</fullName>
    <label>Related PGi Vendor</label>
    <referenceTo>PGi_Vendor_List__c</referenceTo>
    <relationshipLabel>Vendor Scorecards</relationshipLabel>
    <relationshipName>Vendor_Scorecards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>