force-app/main/default/objects/Vendor_Scorecard__c/fields/Responsive_when_PGi_escalations_occur__c.field-meta.xml
<CustomField>
    <fullName>Responsive_when_PGi_escalations_occur__c</fullName>
    <label>Total for REO</label>
    <summarizedField>Vendor_Survey__c.Responsive_when_PGi_escalations_occur__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Survey__c.Responsive_when_PGi_escalations_occur__c</field>
        <operation>notEqual</operation>
        <value>0,</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Survey__c.Vendor_Scorecard__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>