force-app/main/default/objects/Vendor_Scorecard__c/fields/TotalAverage__c.field-meta.xml
<CustomField>
    <fullName>TotalAverage__c</fullName>
    <formula>( AvgCommunicatesnetworkimpactingissue__c +
 AvgFamiliarwPGibusinesstroubles__c +
 AvgKnowledgeableofoutstandingproblem__c +
 AvgProvidesaccuratetimelytickets__c +
 AvgResponsivewhenPGiescalates__c ) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>